Minor changes of openapiDoc and validation/data/reqQueries, add of getAllPosts function in controllers/posts file, and optimization of getOneUser and GetAllUsers functions in controllers/users file
